--- a/src/pages/tools/ruanDl.astro
+++ b/src/pages/tools/ruanDl.astro
@@ -7,8 +7,6 @@ import DownloadApp from '../../components/DownloadApp.vue';
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <!-- SPDX-FileCopyrightText: 2026 联电远连 <work_rrvv@hotmi@hotmail.com> -->
-  <!-- SPDX-License-Identifier: Apache-2.0 -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>软天空改版下载站 | Ruantools</title>
@@ -276,11 +274,11 @@ import DownloadApp from '../../components/DownloadApp.vue';
     <header class="site-header">
       <h1 class="site-title">RuanTools</h1>
       <p class="site-description">经作者授权的改版应用集散地</p>
-      <p class="site-contact">投稿或建议请联系: <a href="mailto:318940921@qq.com">318940921@qq.com</a></p>
+      <p class="site-contact">投稿或建议请联系: <a href="mailto:5haghh49p@mozmail.com">5haghh49p@mozmail.com</a></p>
       
       <div class="site-notice">
         <span class="notice-title">请复制网址</span>
-        <div class="notice-url">https://ruantools.pages.dev/files/apk/ruansky</div>
+        <div class="notice-url">https://mcpackms.github.io/ruantools2/tools/ruanDl/</div>
         <span class="notice-instruction">到浏览器下载</span>
       </div>
     </header>
