--- a/src/pages/tools/ruanDl.astro
+++ b/src/pages/tools/ruanDl.astro
@@ -280,6 +280,7 @@ import DownloadApp from '../../components/DownloadApp.vue';
         <span class="notice-title">请复制网址</span>
         <div class="notice-url">https://mcpackms.github.io/ruantools2/tools/ruanDl/</div>
         <span class="notice-instruction">到浏览器下载</span>
+        <p>如果您的下载速度过慢，可以使用多线程下载器来加速，如adm等</p>
       </div>
     </header>
 
