--- a/src/pages/tools/ruanDl.astro
+++ b/src/pages/tools/ruanDl.astro
@@ -280,7 +280,9 @@ import DownloadApp from '../../components/DownloadApp.vue';
         <span class="notice-title">请复制网址</span>
         <div class="notice-url">https://mcpackms.github.io/ruantools2/tools/ruanDl/</div>
         <span class="notice-instruction">到浏览器下载</span>
-        <p>如果您的下载速度过慢，可以使用多线程下载器来加速，如adm等</p>
+      </div>
+      <div class="site-notice">
+        <span class="notice-title">如果您的下载速度慢，请使用多线程下载器下载，如adm等</span>
       </div>
     </header>
 
