refactor: 主界面改用 React

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 // src/pages/index.astro
 
 // 页面元数据
-import ToolList from '../components/ToolList.vue';
+import ToolList from '../components/ToolList.jsx';
 import { tools } from '../data/tools';
 
 const pageTitle = "RuanTools - 在线工具集合";
